fixing hero image on mobile when held in landscape

--- a/stylesheets/blog_stylesheet.css
+++ b/stylesheets/blog_stylesheet.css
@@ -155,7 +155,7 @@ h3{
 
 @media (orientation: landscape) {
   #welcome-wrapper{
-    min-height: 200!important%
+    min-height: 200vh!important%
 }
 
 @media screen and (min-width: 550px){
